--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,1 +1,21 @@
 
+footer label{
+	display:inline-block;
+	width:15%;
+	text-align:right;
+	color:white;
+}
+
+footer input{
+	display:inline-block;
+	width:83%;
+	padding:5px;
+	border-radius:5px;
+}
+
+#button {
+    width: 200px;
+    background-color: aquamarine;
+    border: solid 2px white;
+    margin-left: 5px;
+}
